--- a/desktop/blog-sg-en.html
+++ b/desktop/blog-sg-en.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Online Casino Tips and Tricks | Real Money Casino | B9Casino</title>
+    <title>Online Casino Tips and Tricks | Real Money Casino | B9MYR2</title>
     <meta
       name="description"
       content="Read the best online casino tips for beginners in B9Casino. We share betting tips on football, how to win double win casino slots free coins, etc."
