--- a/desktop/a-guide-to-fishing-slot-games-everything-you-need-to-know-sg-en.html
+++ b/desktop/a-guide-to-fishing-slot-games-everything-you-need-to-know-sg-en.html
@@ -1206,7 +1206,8 @@ features, bonus rounds, and tips to maximize your wins. Perfect for beginners an
                         <div class="container pl-0 pr-0">
                           <div class="detail-container">
                             <img
-                              src="https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png"
+                              style="width: 100%"
+                              src="images/blog4-A-Guide-to-Fishing-Slot-Games.jpg"
                             />
                             <p class="detail-text pt-3">
                               <a href="https://www.b9myr2.com/fishing.html"
