--- a/desktop/ultimate-guide-to-playing-online-slots-tips-&-strategies-sg-en.html
+++ b/desktop/ultimate-guide-to-playing-online-slots-tips-&-strategies-sg-en.html
@@ -1204,7 +1204,8 @@ features, RTP, and winning strategies. Play smarter and enjoy the thrill respons
                         <div class="container pl-0 pr-0">
                           <div class="detail-container">
                             <img
-                              src="https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png"
+                              style="width: 100%"
+                              src="images/blog3-Ultimate-Guide-to-Playing-Online-Slots-Tips-Strategies.jpg"
                             />
                             <p class="detail-text pt-3">
                               <a href="https://www.b9myr2.com/slots.html"
