--- a/mobile/a-guide-to-fishing-slot-games-everything-you-need-to-know-sg-en.html
+++ b/mobile/a-guide-to-fishing-slot-games-everything-you-need-to-know-sg-en.html
@@ -807,7 +807,8 @@ features, bonus rounds, and tips to maximize your wins. Perfect for beginners an
             <div class="container plr-0">
               <div class="detail-container">
                 <img
-                  src="https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png"
+                  style="width: 100%"
+                  src="images/blog4-A-Guide-to-Fishing-Slot-Games.jpg"
                 />
                 <!-- CONTENT -->
                 <p class="detail-text pt-3">
