--- a/mobile/best-online-slots-to-play-for-real-money-sg-en.html
+++ b/mobile/best-online-slots-to-play-for-real-money-sg-en.html
@@ -807,7 +807,8 @@ progressive jackpots. Explore exciting games at B9MYR2 and spin for big wins tod
             <div class="container plr-0">
               <div class="detail-container">
                 <img
-                  src="https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png"
+                  style="width: 100%"
+                  src="images/blog2_Best-slots-to-play-online-for-real-money.jpg"
                 />
                 <!-- CONTENT -->
                 <p class="detail-text pt-3">
