--- a/mobile/blog-sg-en.html
+++ b/mobile/blog-sg-en.html
@@ -834,7 +834,9 @@
                   class="blogImg"
                   style="
                     margin-bottom: 10px;
-                    background-image: url(https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png);
+                    background-size: cover;
+                    background-position: center;
+                    background-image: url(images/blog1_Sports-Betting-Strategies-for-Beginners.jpg);
                   "
                 ></div>
                 <div class="content-title">
@@ -862,7 +864,9 @@
                   class="blogImg"
                   style="
                     margin-bottom: 10px;
-                    background-image: url(https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png);
+                    background-size: cover;
+                    background-position: center;
+                    background-image: url(images/blog2_Best-slots-to-play-online-for-real-money.jpg);
                   "
                 ></div>
                 <div class="content-title">
@@ -890,7 +894,9 @@
                   class="blogImg"
                   style="
                     margin-bottom: 10px;
-                    background-image: url(https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png);
+                    background-size: cover;
+                    background-position: center;
+                    background-image: url(images/blog3-Ultimate-Guide-to-Playing-Online-Slots-Tips-Strategies.jpg);
                   "
                 ></div>
                 <div class="content-title">
@@ -919,7 +925,9 @@
                   class="blogImg"
                   style="
                     margin-bottom: 10px;
-                    background-image: url(https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png);
+                    background-size: cover;
+                    background-position: center;
+                    background-image: url(images/blog4-A-Guide-to-Fishing-Slot-Games.jpg);
                   "
                 ></div>
                 <div class="content-title">
@@ -948,7 +956,9 @@
                   class="blogImg"
                   style="
                     margin-bottom: 10px;
-                    background-image: url(https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png);
+                    background-size: cover;
+                    background-position: center;
+                    background-image: url(images/blog5-Tips-to-Win-4D-Lottery.jpg);
                   "
                 ></div>
                 <div class="content-title">
@@ -977,7 +987,9 @@
                   class="blogImg"
                   style="
                     margin-bottom: 10px;
-                    background-image: url(https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png);
+                    background-size: cover;
+                    background-position: center;
+                    background-image: url(images/blog6-How-to-Spot-a-Trustworthy-Live-Casino-Platform.jpg);
                   "
                 ></div>
                 <div class="content-title">
