--- a/desktop/best-online-slots-to-play-for-real-money-sg-en.html
+++ b/desktop/best-online-slots-to-play-for-real-money-sg-en.html
@@ -1203,7 +1203,8 @@ progressive jackpots. Explore exciting games at B9MYR2 and spin for big wins tod
                         <div class="container pl-0 pr-0">
                           <div class="detail-container">
                             <img
-                              src="https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png"
+                              style="width: 100%"
+                              src="images/blog2_Best-slots-to-play-online-for-real-money.jpg"
                             />
                             <p class="detail-text pt-3">
                               <a href="https://www.b9myr2.com/slots.html"
