--- a/desktop/blog-sg-en.html
+++ b/desktop/blog-sg-en.html
@@ -1125,7 +1125,7 @@
                             <div
                               class="blogImg"
                               style="
-                                background-image: url(https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png);
+                                background-image: url(images/blog1_Sports-Betting-Strategies-for-Beginners.jpg);
                               "
                             ></div>
                             <div class="blogContentContainer">
@@ -1160,7 +1160,7 @@
                             <div
                               class="blogImg"
                               style="
-                                background-image: url(https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png);
+                                background-image: url(images/blog2_Best-slots-to-play-online-for-real-money.jpg);
                               "
                             ></div>
                             <div class="blogContentContainer">
@@ -1195,7 +1195,7 @@
                             <div
                               class="blogImg"
                               style="
-                                background-image: url(https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png);
+                                background-image: url(images/blog3-Ultimate-Guide-to-Playing-Online-Slots-Tips-Strategies.jpg);
                               "
                             ></div>
                             <div class="blogContentContainer">
@@ -1231,7 +1231,7 @@
                             <div
                               class="blogImg"
                               style="
-                                background-image: url(https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png);
+                                background-image: url(images/blog4-A-Guide-to-Fishing-Slot-Games.jpg);
                               "
                             ></div>
                             <div class="blogContentContainer">
@@ -1267,7 +1267,7 @@
                             <div
                               class="blogImg"
                               style="
-                                background-image: url(https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png);
+                                background-image: url(images/blog5-Tips-to-Win-4D-Lottery.jpg);
                               "
                             ></div>
                             <div class="blogContentContainer">
@@ -1303,7 +1303,7 @@
                             <div
                               class="blogImg"
                               style="
-                                background-image: url(https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png);
+                                background-image: url(images/blog6-How-to-Spot-a-Trustworthy-Live-Casino-Platform.jpg);
                               "
                             ></div>
                             <div class="blogContentContainer">
