--- a/desktop/how-to-spot-a-trustworthy-live-casino-platform-sg-en.html
+++ b/desktop/how-to-spot-a-trustworthy-live-casino-platform-sg-en.html
@@ -1203,7 +1203,8 @@ payment security to software providers and fair gameplay, we've got you covered.
                         <div class="container pl-0 pr-0">
                           <div class="detail-container">
                             <img
-                              src="https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png"
+                              style="width: 100%"
+                              src="images/blog6-How-to-Spot-a-Trustworthy-Live-Casino-Platform.jpg"
                             />
                             <p class="detail-text pt-3">
                               When it comes to online gaming, live casino
