--- a/desktop/sports-betting-strategies-for-beginners-sg-en.html
+++ b/desktop/sports-betting-strategies-for-beginners-sg-en.html
@@ -1203,7 +1203,8 @@ manage risks, find value bets, and enhance your success in betting with B9MYR2."
                         <div class="container pl-0 pr-0">
                           <div class="detail-container">
                             <img
-                              src="https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png"
+                              style="width: 100%"
+                              src="images/blog1_Sports-Betting-Strategies-for-Beginners.jpg"
                             />
                             <p class="detail-text pt-3">
                               Sports betting is an exciting way to enhance your
