--- a/mobile/tips-to-increse-your-chances-of-winning-lottery-at-4d-sg-en.html
+++ b/mobile/tips-to-increse-your-chances-of-winning-lottery-at-4d-sg-en.html
@@ -807,7 +807,8 @@ Explore tips like number selection, betting types, and managing your budget."
             <div class="container plr-0">
               <div class="detail-container">
                 <img
-                  src="https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png"
+                  style="width: 100%"
+                  src="images/blog5-Tips-to-Win-4D-Lottery.jpg"
                 />
                 <!-- CONTENT -->
                 <p class="detail-text pt-3">
