--- a/mobile/ultimate-guide-to-playing-online-slots-tips-&-strategies-sg-en.html
+++ b/mobile/ultimate-guide-to-playing-online-slots-tips-&-strategies-sg-en.html
@@ -809,7 +809,8 @@ features, RTP, and winning strategies. Play smarter and enjoy the thrill respons
             <div class="container plr-0">
               <div class="detail-container">
                 <img
-                  src="https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png"
+                  style="width: 100%"
+                  src="images/blog3-Ultimate-Guide-to-Playing-Online-Slots-Tips-Strategies.jpg"
                 />
                 <!-- CONTENT -->
                 <p class="detail-text pt-3">
