--- a/desktop/tips-to-increse-your-chances-of-winning-lottery-at-4d-sg-en.html
+++ b/desktop/tips-to-increse-your-chances-of-winning-lottery-at-4d-sg-en.html
@@ -1203,7 +1203,8 @@ Explore tips like number selection, betting types, and managing your budget."
                         <div class="container pl-0 pr-0">
                           <div class="detail-container">
                             <img
-                              src="https://hksb9c2p4.cloudcdnetw.com/b9v1/images/blog/rules-of-baccarat-online.png"
+                              style="width: 100%"
+                              src="images/blog5-Tips-to-Win-4D-Lottery.jpg"
                             />
                             <p class="detail-text pt-3">
                               Winning the lottery, particularly
