--- a/desktop/how-to-spot-a-trustworthy-live-casino-platform-sg-cn.html
+++ b/desktop/how-to-spot-a-trustworthy-live-casino-platform-sg-cn.html
@@ -1294,7 +1294,7 @@
                             </p>
                             <div
                               class="backBtn"
-                              onclick="window.location.href='blog-sg-en.html'"
+                              onclick="window.location.href='blog-sg-cn.html'"
                             >
                               BACK
                             </div>
