--- a/desktop/ultimate-guide-to-playing-online-slots-tips-&-strategies-sg-cn.html
+++ b/desktop/ultimate-guide-to-playing-online-slots-tips-&-strategies-sg-cn.html
@@ -1303,7 +1303,7 @@
 
                             <div
                               class="backBtn"
-                              onclick="window.location.href='blog-sg-en.html'"
+                              onclick="window.location.href='blog-sg-cn.html'"
                             >
                               BACK
                             </div>
