--- a/desktop/best-online-slots-to-play-for-real-money-sg-cn.html
+++ b/desktop/best-online-slots-to-play-for-real-money-sg-cn.html
@@ -1260,7 +1260,7 @@
 
                             <div
                               class="backBtn"
-                              onclick="window.location.href='blog-sg-en.html'"
+                              onclick="window.location.href='blog-sg-cn.html'"
                             >
                               BACK
                             </div>
