--- a/desktop/tips-to-increse-your-chances-of-winning-lottery-at-4d-sg-cn.html
+++ b/desktop/tips-to-increse-your-chances-of-winning-lottery-at-4d-sg-cn.html
@@ -1293,7 +1293,7 @@
 
                             <div
                               class="backBtn"
-                              onclick="window.location.href='blog-sg-en.html'"
+                              onclick="window.location.href='blog-sg-cn.html'"
                             >
                               BACK
                             </div>
