--- a/desktop/blog-sg-cn.html
+++ b/desktop/blog-sg-cn.html
@@ -1098,7 +1098,7 @@
                 <tr>
                   <td class="td-content-page">
                     <div class="text-center headerBg">
-                      <h1 class="pageHeader">
+                      <h1 class="pageHeader" style="margin-bottom: 15px;">
                         得信赖的新加坡线上赌场: 独家提示和指南
                       </h1>
                       <h2 class="pageSubHeader">
