--- a/desktop/blog-sg-en.html
+++ b/desktop/blog-sg-en.html
@@ -1105,7 +1105,7 @@
                 <tr>
                   <td class="td-content-page">
                     <div class="text-center headerBg">
-                      <h1 class="pageHeader">
+                      <h1 class="pageHeader" style="margin-bottom: 15px;">
                         Trusted Singapore Online Casino: Exclusive Tips &amp;
                         Guides
                       </h1>
